# atmolyt-host

./: .gitignore  Dockerfile  README.md  RELEASE_NOTES.md
.github/workflows/: build.yml
build_boost/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  atmolyt-host  cmake_install.cmake  test_atmolyt
build_m1s/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  test_atmolyt
build_m1s/_CPack_Packages/Linux/TGZ/atmolyt-host-0.1.0/config/: atmolyt.json
build_m1s/_CPack_Packages/Linux/TGZ/atmolyt-host-0.1.0/scripts/: debug.sh  install.sh  remove.sh  start.sh
build_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  atmolyt-host  cmake_install.cmake  test_atmolyt
config/: atmolyt.json
configs/: atmolyt.json
inc/app/: application.h  csv_logger.h  signal_handler.h
inc/config/: cmdline_parser.h  config_loader.h  json_parser.h
inc/connections/: connection_iface.h  i2c_connection.h  mock_connection.h  spi_connection.h  uart_connection.h
inc/connecttions/: connection_iface.h  i2c_connection.h  mock_connection.h  spi_connection.h  uart_connection.h
inc/peripheral/: bme280.h  ds3231.h  mock_environmental.h  peripheral_factory.h  peripheral_iface.h  scd41.h  ssd1306.h
inc/self_test/: self_test.h
project/: CMakeLists.txt
project/config/: atmolyt.json
scripts/: debug.sh
src/: main.cpp
src/app/: application.cpp  csv_logger.cpp  signal_handler.cpp
src/config/: cmdline_parser.cpp  config_loader.cpp  json_parser.cpp
src/connections/: i2c_connection.cpp  mock_connection.cpp  spi_connection.cpp  uart_connection.cpp
src/peripheral/: bme280.cpp  ds3231.cpp  mock_environmental.cpp  peripheral_factory.cpp  scd41.cpp  ssd1306.cpp
src/self_test/: self_test.cpp
tests/: test_connection_mock.h  test_main.cpp
